--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,7 +3,7 @@ on:
   schedule:
     - cron: "*/6 * * * *"
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
     branches:
   workflow_dispatch:
